--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "postcss": "^8.2.1",
+    "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
