--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.2.1",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
+    "react-accessible-dropdown-menu-hook": "^2.2.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.0.2"
