--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "autoprefixer": "^10.1.0",
-    "gatsby": "^2.23.9",
+    "gatsby": "^4.6.0",
     "gatsby-image": "^2.4.8",
-    "gatsby-plugin-postcss": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.3.5",
+    "gatsby-plugin-google-gtag": "^4.6.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-postcss": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-source-contentful": "^2.3.17",
-    "gatsby-transformer-remark": "^2.8.18",
-    "gatsby-transformer-sharp": "^2.5.6",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-source-contentful": "^6.1.4",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
     "gh-pages": "^3.1.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "postcss": "^8.2.1",
     "pure-react-carousel": "^1.27.6",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^2.2.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.0.2"
   },
