--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "contentful-import": "^7.8.6",
     "netlify-cli": "^2.54.0"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
     "gatsby",
